@@ -2511,28 +2511,41 @@ div[class*=' pa-'] {
     align-items: center;
     cursor: pointer;
     outline: 0; }
-  .pp-advanced-accordion .pp-accordion-toggle-icon {
-    z-index: 10; }
-  .pp-advanced-accordion .pp-accordion-toggle-icon-open,
-  .pp-advanced-accordion .pp-accordion-tab-show .pp-accordion-toggle-icon-close,
-  .pp-advanced-accordion .pp-accordion-tab-active-default .pp-accordion-toggle-icon-close {
-    display: none; }
-  .pp-advanced-accordion .pp-accordion-tab-show .pp-accordion-toggle-icon-open,
-  .pp-advanced-accordion .pp-accordion-tab-active-default .pp-accordion-toggle-icon-open {
-    display: inline; }
-  .pp-advanced-accordion .pp-accordion-tab-content {
-    display: none;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 1rem;
-    line-height: 1.7; }
-    .pp-advanced-accordion .pp-accordion-tab-content p:last-child {
-      margin: 0; }
-    .pp-advanced-accordion .pp-accordion-tab-content.pp-accordion-tab-active {
-      display: block; }
   .pp-advanced-accordion.pp-toggle-icon-align-left .pp-accordion-tab-title {
     flex-direction: row-reverse;
     justify-content: flex-end; }
+
+.pp-accordion-toggle-icon {
+  transition: none;
+  z-index: 10; }
+
+.pp-accordion-toggle-icon-open,
+.pp-accordion-tab-show .pp-accordion-toggle-icon-close,
+.pp-accordion-tab-active-default .pp-accordion-toggle-icon-close {
+  display: none; }
+
+.pp-accordion-tab-show .pp-accordion-toggle-icon-open,
+.pp-accordion-tab-active-default .pp-accordion-toggle-icon-open {
+  display: inline-block; }
+
+.pp-accordion-tab-content {
+  display: none;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 1rem;
+  line-height: 1.7; }
+  .pp-accordion-tab-content p:last-child {
+    margin: 0; }
+  .pp-accordion-tab-content.pp-accordion-tab-active {
+    display: block; }
+
+.pp-accordion-item {
+  overflow: hidden;
+  transition: all 0.3s ease-in-out; }
+
+.pp-accordion-title-icon {
+  display: flex;
+  align-items: center; }
 
 .pp-accordion-tab-icon {
   display: inline-block;
